# ObjectTracker

./: AUTHORS  CMakeLists.txt  OpenTLDConfig.cmake.in  README.md  accuracy_test_instruction.md  installation.md
sample/benchmark/: calc.py  cfg_gen.py  deleteTest.py
src/libopentld/: CMakeLists.txt  CMakeLists2.txt
src/libopentld/imacq/: ImAcq.cpp  ImAcq.h
src/libopentld/tld/: Clustering.cpp  Clustering.h  DetectionResult.cpp  DetectionResult.h  DetectorCascade.cpp  DetectorCascade.h  EnsembleClassifier.cpp  EnsembleClassifier.h  IntegralImage.h  NNClassifier.cpp  NNClassifier.h  NormalizedPatch.h  TLD.cpp  TLD.h  TLDUtil.cpp  TLDUtil.h  VarianceFilter.cpp  VarianceFilter.h
src/opentld/: CMakeLists.txt  OpenTLD.cpp
src/opentld/main/: Config.cpp  Config.h  Gui.cpp  Gui.h  Main.cpp  Main.h  Settings.cpp  Settings.h  Trajectory.cpp  Trajectory.h  trackerTld.json
